# codingame-the-accountant

./: CMakeLists.txt  combine  game.cpp  game.h  geom.h  logic.cpp  logic.h  main.cb  main.cpp  optimizer.cpp  optimizer.h
data/: 02_2_enemies_redux.txt  26_near_impossible.txt
test/: CMakeLists.txt  bench.cpp  perf.cpp
